--- a/.github/workflows/update_manifest.yml
+++ b/.github/workflows/update_manifest.yml
@@ -41,5 +41,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "🤖 Auto-update manifest.json"
-          file_pattern: "manifest.json"
+          file_pattern: "arbor-games/manifest.json"
           branch: main
