--- a/.github/workflows/update_manifest.yml
+++ b/.github/workflows/update_manifest.yml
@@ -1,3 +1,4 @@
+
 name: Update Arcade Manifest
 
 on:
@@ -41,5 +42,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "🤖 Auto-update manifest.json"
-          file_pattern: "arbor-games/manifest.json"
+          file_pattern: "manifest.json"
           branch: main
