feat(ui): Enhance game layout and responsiveness
Refactors the main layout component (`index.tsx`) to improve responsiveness across different screen sizes. Adjusts padding, header text sizes, and the layout of the engine information display.

Also adds the "Hello World" game to the manifest and updates the `memory-garden` entry to include author and version.

The `classroom` game's dialogue box styles are updated for better contrast and visibility. The `assets.js` file now uses lighter background colors for improved visual clarity. The `memory` game's card styles are adjusted for better 3D rendering.

--- a/arbor-games/manifest.json
+++ b/arbor-games/manifest.json
@@ -17,5 +17,14 @@
     "path": "./arbor-games/memory/index.html",
     "author": "Arbor Official",
     "version": "1.0.0"
+  },
+  {
+    "id": "hello-world",
+    "name": "Hello World",
+    "icon": "👋",
+    "description": "Ejemplo básico y responsive para desarrolladores.",
+    "path": "./arbor-games/hello-world/index.html",
+    "author": "Arbor Official",
+    "version": "1.0.0"
   }
 ]
