feat: Add new games and update classroom responsiveness
Introduces the "Primer Trabajo" and "Hello World: Bridge v2" games, expanding the Arbor Games collection.
Updates the "Classroom Simulator" game to improve mobile responsiveness by repositioning the text input overlay to the top of the screen, preventing overlap with the keyboard. Enhances keyboard input handling for dialogue advancement and text submission.

--- a/arbor-games/manifest.json
+++ b/arbor-games/manifest.json
@@ -18,4 +18,22 @@
     "author": "Arbor Official",
     "version": "1.0.0"
   },
+  {
+    "id": "primer-trabajo",
+    "name": "Primer Trabajo",
+    "icon": "💼",
+    "description": "Simula tu primer día en un nuevo trabajo basado en lo que estás estudiando.",
+    "path": "./arbor-games/primer-trabajo/index.html",
+    "author": "Arbor Official",
+    "version": "1.0.0"
+  },
+  {
+    "id": "hello-world",
+    "name": "Hello World: Bridge v2",
+    "icon": "👋",
+    "description": "Plantilla de diagnóstico para desarrolladores. Demuestra la integración con Arbor.",
+    "path": "./arbor-games/hello-world/index.html",
+    "author": "Arbor Official",
+    "version": "2.0.0"
+  }
 ]
