feat(starship): Add Starship Learner game
Introduces a new game where players explore the curriculum as a galaxy. They can fly between lessons (planets) and land to acquire knowledge, with the game dynamically generating content based on the Arbor knowledge tree. Includes basic ship controls, fuel management, and a CRT-like visual effect.

--- a/arbor-games/manifest.json
+++ b/arbor-games/manifest.json
@@ -26,5 +26,14 @@
     "path": "./arbor-games/firstjob/index.html",
     "author": "Arbor Official",
     "version": "3.0.0"
+  },
+  {
+    "id": "starship",
+    "name": "Starship Learner",
+    "icon": "🚀",
+    "description": "Explora el currículo como una galaxia. Vuela entre lecciones y aterriza para adquirir conocimiento.",
+    "path": "./arbor-games/starship/index.html",
+    "author": "Arbor Official",
+    "version": "1.0.0"
   }
 ]
